# alabamaEncoder

./: .gitignore  CeleryApp.py  Dockerfile  LICENSE  README.md  a.py  build_svt.sh  build_upload_pypi.sh  buildandinstall.sh  clean.sh  concat.py  cvm.ipynb  main.py  netflix_tiers  netflix_tiers.md  nfsMountDocker  pyproject.toml  readme.md  rebuild_and_install_local.sh  requirements.txt  setup.py  temo.py  todo.md  ugh.ipynb  vmaf_v0.6.1neg-nomotion.json
.github/workflows/: python-publish.yml
Photon-Noise-Tables-aomenc-repo/1280x720/: photon-noise-1280x720-aomenc-bt2020.sh  photon-noise-1280x720-aomenc-srgb.sh
Photon-Noise-Tables-aomenc-repo/1440x1080/: photon-noise-1440x1080-aomenc-bt2020.sh  photon-noise-1440x1080-aomenc-srgb.sh
Photon-Noise-Tables-aomenc-repo/1440x810/: photon-noise-1440x1080-aomenc-bt2020.sh  photon-noise-1440x1080-aomenc-srgb.sh
alabamaEncode/: CeleryApp.py  CeleryAutoscaler.py  __main__.py  alabama.py  alabamaPath.py  bin_utils.py  cli_executor.py  core.py  ffmpeg.py  ffmpegUtil.py  final_touches.py  metrics.py  path.py  timer.py
alabamaEncode/adaptive/: analyser.py  executor.py  util.py
blogging/: a.md  chromathing.md  enable-overlays.md  enable-tf_inSvtav1.md  qmquant.md  speed.md  superres.md  svt_tunes.md  todo.md
docs/: USAGE-OLD.md  USAGE.md
hoeEncode/: CeleryApp.py  CeleryAutoscaler.py  __main__.py  ffmpegUtil.py
paraliezeMeHoe/: CeleryAutoscaler.py  ThaVaidioEncoda.py
scripts/: .dockerignore  Dockerfile  build_upload_pypi.sh  runTheDocker
somepapers/: LINKS  Notes  links.md
temp_211/: sceneCache.json
(+711 files in other folders)
